static/css/s2.css
/* ... */
.lexicon-results .entry .morphology{
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  display: block;
}

.lexicon-results .entry .definition-content{
    color: #444;
}
.lexicon-results ol {
	list-style-position: inside;
}
.lexicon-results .entry .definition li.sense{
	margin-left: 15px;
	padding: 0px;
	/*margin: 0;*/
}
.lexicon-results .entry .definition ol.senses{
	/*list-style-type: none;*/
	padding-left: 0px;
}
.lexicon-results .entry .definition > li.sense{
	/*list-style-type: none;*/
	margin-left: 0px;
}
.lexicon-results .entry ol.definition {
	list-style-type: none;
	padding-top: 2px;
	padding-left: 0px;
    margin: 0px;
}
/*.sense + .sense {
	margin-top: 3px;
	padding-top: 3px;
	border-top: 1px solid #eee;}*/

/*.lexicon-results a {
	font-size: 12px;
}*/
.lexicon-results .attribution{

}
.lexicon-results .attribution span{
  display: block;
}
.lexicon-results .attribution a{
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #aaa;
  font-size: 10px;
}
.lexicon-content .headword.en, .lexicon-content .headword.he,
.lexicon-content .definition-content.en, .lexicon-content .definition-content.he,
.lexicon-content .lexicon-results .attribution{
  display: inline;
}
.lexicon-content .headword.he, .lexicon-content .definition-content.he{
  direction: rtl;
}
.lexicon-content .headword.en, .lexicon-content .definition-content.en{
  direction: ltr;
}
h2.splitHeader {
  margin-bottom: 10px;
  text-align: left;
}
h2.splitHeader .en {
  font-size: 14px;
}
h2.splitHeader .he {
  font-size: 14px;
}
.splitHeader .actionText {
  float:right;
  text-transform: none;
  cursor: pointer;
}
.splitHeader .actionText select {
  margin-left: 6px;
}
.sheetsNewButton {
  text-align:center;
  margin-bottom: 30px;
}
.sheetsNewButton a {
  font-color: inherit;
}
.sheet.userSheet .sheetTitle  {
   font-family: "adobe-garamond-pro", Georgia, serif;
   font-size: 20px;
   color:#333;
   margin-bottom: 6px;
}
.sheet.userSheet {
   font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 14px;
   color:#999;
  text-decoration: none;
}
.filterByTag {
  cursor: pointer;
  text-transform: none
}
/*  Add back in when we're ready for tag/edit hover buttons on 'My Sheets'
.sheet.userSheet:hover .sheetEditButtons {
	display: inline-block;
}
*/
.sheet.userSheet .sheetEditButtons {
  font-size: 24px;
  height: 32px;
  width: 32px;
  text-align: center;
  line-height: 32px;
  background-color: white;
  border: 1px solid #E6E6E6;
  border-radius: 4px;
  margin-left: 10px;
  display: none;
  float:right;
  cursor: pointer;
  color: #999;
  text-decoration: none;
}
.sheetButton:hover {
  text-decoration: underline;
}
.sheetButton{
  border: 1px solid #fff;
}
.sheetButton.active {
  border: 1px solid #333;
}
.tagString a {
  text-decoration: none;
  color: #999;
}
.tagString a:after {
  content: ", ";
  color: #999;
}
.tagString a:last-child:after {
  content: "";
}
.groupsList {
  margin-top: 30px;
}
.groupsList .loadingMessage {
  text-align: center;
}
.groupListing {
  padding: 30px 0;
}
.groupListing + .groupListing {
  border-top: 1px solid #ccc;
}
.groupListingImageBox {
  background-color: white;
  width: 60px;
  height: 60px;
  float: left;
  margin-right: 20px;
}
.groupListingImage {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
.groupListingImage.default {
  width: 80%;
  height: 80%;
  margin: 10%;
  opacity: 0.4;
}
.groupListingName {
  display: block;
  font-size: 24px;
  color: #666;
  margin-bottom: 5px;
}
.groupListingName:hover {
  color: #333;
}
.groupListingDetails {
  color: #999;
  font-size: 15px;
}
.groupListingDetailSeparator {
  margin: 8px;
}
.groupPage .groupImage {
  max-height: 200px;
  max-width: 100%;
  display: block;
  margin: 0 auto 50px;
}
.groupInfo {
  margin-bottom: 50px;
}
.groupPage h1 {
  margin-top: 20px;
  height: auto;
}
.groupPage a:hover {
  color: inherit;
}
.groupPage .groupWebsite {
  display: block;
  text-align: center;
  font-size: 17px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  margin-bottom: 20px;
  color: #999;
}
.groupPage .groupDescription {
  font-size: 16px;
  text-align: center;
}
.groupPage .tabs {
  text-align: center;
  margin-bottom: 60px;
}
.groupPage .bubbleTab {
  font-size: 16px;
}
.groupPage .emptyMessage {
  text-align: center;
}
.groupPage .emptyMessage a {
  text-decoration: underline;
}
.groupInvitationBox {
  border-bottom: 1px solid #CCC;
  padding-bottom: 20px;
}
.groupSheetListingPinButton {
  float: right;
  display: none;
  opacity: 0.3;
  cursor: pointer;
  margin-top: 7px;
}
.sheet:hover .groupSheetListingPinButton.active {
  display: block;
}
.groupSheetListingPinButton.pinned {
  display: block;
  opacity: 0.6;
}
#groupInvitationInput {
  padding: 14px 30px;
  width: 492px;
  border-radius: 4px;
  outline: 0;
  border: 1px solid #E6e6e6;
  margin-right: 10px;
  font-size: 18px;
  position: relative;
  top: 3px;
}
.groupInvitationBoxMessage {
  font-size: 18px;
  padding: 12px 0 0;
  text-align: center;
}
.groupPage .groupMemberListing {
  padding: 24px 0;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  font-size: 20px;
}
.groupMemberListing + .groupMemberListing {
  border-top: 1px solid #CCC;
}
.groupMemberListingProfileImage {
  height: 50px;
  width: 50px;
  vertical-align: middle;
}
.groupMemberListingName {
  color: #666;
  margin: 0 20px;
}
.groupInvitationListing {
  display: inline-block;
  min-height: 50px;
  line-height: 50px;
}
.groupMemberListingRoleBox {
  float: right;
  line-height: 50px;
}
.groupMemberListingRole {
  color: #666;
}
.groupMemberListingActions {
  position: relative;
  display: inline-block;
  background-color: white; 
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-left: 12px;
  line-height: 36px
}
.groupMemberListingActionsButton {
  cursor: pointer;
  padding: 0 12px;
  font-size: 18px;
  color: #CCC;
}
/* ... */

